getting output of compilation works